--- a/front-end-estatico/aula-CSS/index.html
+++ b/front-end-estatico/aula-CSS/index.html
@@ -19,7 +19,7 @@
         }
 
         /* Seletor por classe */
-        . titulo
+        . titulo,
         . subtitulo {
             color: red;
         }
