--- a/logica-de-programacao-l-javascript/exercicio-de-fixacao-4/index.html
+++ b/logica-de-programacao-l-javascript/exercicio-de-fixacao-4/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade de Fixação 04 - Estruturas de Repetição</title>
+    <sript type="text/javascript" src="script.js"></sript>
 </head>
 <body>
     <script>
         /*1 - Faça um programa que imprima na tela apenas os números ímpares entre 1 e 50;*/
 
+        for (let i = 1; i <= 50; i++) {
+            if (i % 2 != 0) {
+                alert (i);
+            }
+        }
 
         /*2 - Desenvolva um gerador de tabuada, capaz de gerar a tabuada de qualquer número inteiro entre 1 a 10. O usuário deve informar
         de qual numero ele deseja ver a tabuada. A saída deve ser conforme o exemplo abaixo:
@@ -19,7 +25,15 @@
         ...
         5 X 10 = 50*/
 
-        let num = parseInt(prompt"Você deseja ver a tatuada de qual número?");
+        /*let num = parseInt(prompt"Insira um número inteiro de 0 a 10:");
+        let resposta =;
+        let tabuada ="";
+
+        function tabuada(num) {
+            for (let count=1; count<=10; count++)
+            return num*co
+            alert ("")
+        }*/
 
 
         /*3 - Percorra uma lista de números (estática ou preenchida pelo usuário) e mostre o menor e o maior números dessa lista.*/
