--- a/logica-de-programacao-l-javascript/exercicio-de-fixacao-4/index.html
+++ b/logica-de-programacao-l-javascript/exercicio-de-fixacao-4/index.html
@@ -11,7 +11,7 @@
     <script>
         /*1 - Faça um programa que imprima na tela apenas os números ímpares entre 1 e 50;*/
 
-        for (let i = 1; i <= 50; i++) {
+        for (let i = 1; i < 50; i++) {
             if (i % 2 != 0) {
                 alert (i);
             }
@@ -25,19 +25,36 @@
         ...
         5 X 10 = 50*/
 
-        /*let num = parseInt(prompt"Insira um número inteiro de 0 a 10:");
-        let resposta =;
-        let tabuada ="";
+        /*console.log("Exercício 2 | Tabuada");
+        console.log(" ");
 
-        function tabuada(num) {
-            for (let count=1; count<=10; count++)
-            return num*co
-            alert ("")
+        let num = parseInt(prompt("Insira um número inteiro entre 1 e 10 e confira sua tabuada:"));
+
+        for (let i = 1; i <= 10; i++) {
+            document.write("<br>[Tabuada de " num + "]<br><br>);
+            for (let num = 1; i <= 10; )
+            document.write (num + " x " + i + " = " + num*i + "<br>");
         }*/
-
+    
 
         /*3 - Percorra uma lista de números (estática ou preenchida pelo usuário) e mostre o menor e o maior números dessa lista.*/
 
+        /*let quantidade = parseFloat(prompt("Quantos números você deseja digitar?"));
+
+            for (let i = 0; i < quantidade; i++) {
+                let numero = parseInt(prompt("Digite um número por vez e dê enter:"));
+
+                if (numero > maior) {
+                    return maior;
+                }
+
+                if (numero < menor) {
+                    return menor;
+                }
+            }
+
+        console.log("O menor número digitado foi: " + menor);
+        console.log("O maior número digitado foi: " + maior);*/
     </script>
 </body>
 </html>
