--- a/logica-de-programacao-l-javascript/exercicio-de-fixacao-4/index.html
+++ b/logica-de-programacao-l-javascript/exercicio-de-fixacao-4/index.html
@@ -43,16 +43,13 @@
             alert(`Tabuada do ${num}:\n ${tabuada}`);
         }
 
-
-
         /*3 - Percorra uma lista de números (estática ou preenchida pelo usuário) e mostre o 
         menor e o maior números dessa lista.*/
 
         let geraLista = () => {
             lista = []
-            lenLista = Math.floor(Math.random() * (7 - 5)) + 5;
-            for (i = 0; i <= lenLista; i++) {
-                lista.push(Math.floor(Math.random() * (99 - -99)) + -99)
+            for (i = 0; i < 5; i++) {
+                lista.push(Math.floor(Math.random() * (100 - -50)) + -50)
             }
             return lista
         }
@@ -61,10 +58,16 @@
         let maior = lista_aleat[0];
         let menor = lista_aleat[0];
 
-        
+        for (i of lista_aleat) {
+            if (i > maior) {
+                maior = i;
+            }
+            if (i < menor) {
+                menor = i;
+            }
+        }
 
-
-
+        alert (`A lista é: ${lista_aleat}\nO menor valor da lista é: ${menor}\nO maior valor da lista é: ${maior}`);
     </script>
 </body>
 
