--- a/logica-de-programacao-l-javascript/atividade-principal-1/index.html
+++ b/logica-de-programacao-l-javascript/atividade-principal-1/index.html
@@ -1,24 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade Principal 01 - Jogo da Forca</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jogo da Forca</title>
+  </head>
+  <body>
     <script>
+
         /*PRINCIPAL (700XP)
         - Fazer um jogo da forca (não precisa mostrar nada no DOM, somente usando alert e prompt é suficiente);
         - O usuário deve poder dizer se ele quer jogar novamente ou não;
         - Ter uma conjunto de palavras possíveis, cada uma com um tema associado;
         - Fazer todas as validações necessárias (prever erros do usuário, como digitar um número ao invés de uma letra, dentre outros);
-
         EXTRA (200XP)
         - Ter algum respaldo visual da forca no HTML (não precisa ser a forca inteira, só o bonequinho palito já está ótimo);
         - As palavras possíveis da forca devem vir de alguma API externa ou um arquivo TXT/JSON contendo a lista de palavras (se 
         sentirem dúvida, podem me procurar; vou ensinar o TXT/JSON em sala).*/
+
+      const arrayPalavras = [
+        { nome: "futebol", categoria: "esporte" },
+        { nome: "basquete", categoria: "esporte" },
+        { nome: "volei", categoria: "esporte" },
+        { nome: "tenis", categoria: "esporte" },
+        { nome: "golfe", categoria: "esporte" },
+        { nome: "rock", categoria: "música" },
+        { nome: "jazz", categoria: "música" },
+        { nome: "pop", categoria: "música" },
+        { nome: "mpb", categoria: "música" },
+        { nome: "metal", categoria: "música" },
+        { nome: "lasanha", categoria: "comida" },
+        { nome: "pizza", categoria: "comida" },
+        { nome: "nhoque", categoria: "comida" },
+        { nome: "estrogonofe", categoria: "comida" },
+        { nome: "macarronada", categoria: "comida" },
+      ];
+
+      function mostraCategoria(arrayPalavras) {
+        let posicao = parseInt(Math.random() * arrayPalavras.length);
+        palavraAleatoria = arrayPalavras[posicao].nome;
+        let categoriaAleatoria = arrayPalavras[posicao].categoria;
+        console.log(palavraAleatoria);
+
+        return "A categoria é: " + categoriaAleatoria;
+      }
+
+     function traçosNaTela(tracinhos, palavraAleatoria) {
+        for (let i = 0; i < palavraAleatoria.length; i++) {
+          tracinhos.push("_");
+        }
+        return tracinhos.join(" ");
+      }
+
+      function revelarLetra(letra, tracinhos, palavraAleatoria) {
+        for (let i = 0; i < palavraAleatoria.length; i++) {
+          if (letra === palavraAleatoria[i]) {
+            tracinhos[i] = letra;
+          }
+        }
+        return tracinhos.join(" ");
+      }
+
+      function venceu(tracinhos) {
+        let quantidadeTracinhos = 0;
+
+        for (let i = 0; i < tracinhos.length; i++) {
+          if (tracinhos[i] === "_") {
+            quantidadeTracinhos += 1;
+          }
+        }
+        return quantidadeTracinhos === 0;
+      }
+
+      let palavraAleatoria;
+
+      let tracinhos = [];
+
+      console.log("Jogo da Forca!");
+      console.log(" "); //pular uma linha
+
+      let categoriaRevelada = mostraCategoria(arrayPalavras);
+
+      let palavraRevelada = traçosNaTela(tracinhos, palavraAleatoria);
+
+      let letra = null;
+
+      while (venceu(tracinhos) === false) {
+        letra = prompt(
+          categoriaRevelada +
+            "\n\n" +
+            palavraRevelada +
+            "\n\n" +
+            "Digite uma letra: "
+        );
+
+        palavraRevelada = revelarLetra(letra, tracinhos, palavraAleatoria);
+      }
+
+      alert("Parabéns você acertou a palavra " + palavraAleatoria);
+
     </script>
-    
-</body>
+  </body>
 </html>
