--- a/logica-de-programacao-l-javascript/atividade-principal-2/assets/index.html
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/assets/index.html
@@ -220,25 +220,25 @@
             objImagem = document.getElementById("imagem")
             switch (qtErro) {
                 case 1:
-                    objImagem.style.background = "url('./image/forca01.png')";
+                    objImagem.style.background = "url('./assets/images.forca01.png')";
                     break;
                 case 2:
-                    objImagem.style.background = "url('./image/forca02.png')";
+                    objImagem.style.background = "url('./assets/images.forca02.png')";
                     break;
                 case 3:
-                    objImagem.style.background = "url('./image/forca03.png')";
+                    objImagem.style.background = "url('./assets/images.forca03.png')";
                     break;
                 case 4:
-                    objImagem.style.background = "url('./image/forca04.png')";
+                    objImagem.style.background = "url('./assets/images.forca04.png')";
                     break;
                 case 5:
-                    objImagem.style.background = "url('./image/forca05.png')";
+                    objImagem.style.background = "url('./assets/images.forca05.png')";
                     break;
                 case 6:
-                    objImagem.style.background = "url('./image/forca06.png')";
+                    objImagem.style.background = "url('./assets/images.forca06.png')";
                     break;
                 default:
-                    objImagem.style.background = "url('./image/forca.png')";
+                    objImagem.style.background = "url('./assets/images.forca.png')";
                     break;
             }
         }
