--- a/logica-de-programacao-l-javascript/atividade-principal-2/assets/index.html
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/assets/index.html
@@ -84,7 +84,7 @@
         let placarVitoria = 0;
         let placarDerrota = 0;
 
-        fetch('palavras.json')
+        fetch('./json/palavras.json')
             .then(response => response.json())
             .then(data => {
                 palavrasJson = data;
