--- a/logica-de-programacao-l-javascript/atividade-principal-2/index.html
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/index.html
@@ -24,7 +24,7 @@
             <div class="teclas">
                 <button id="teclaQ" onclick="verificaLetra('Q')">Q</button>
                 <button id="teclaW" onclick="verificaLetra('W')">W</button>
-                <button id="teclaC" onclick="verificaLetra('E')">E</button>
+                <button id="teclaE" onclick="verificaLetra('E')">E</button>
                 <button id="teclaR" onclick="verificaLetra('R')">R</button>
                 <button id="teclaT" onclick="verificaLetra('T')">T</button>
                 <button id="teclaY" onclick="verificaLetra('Y')">Y</button>
