--- a/programacao-orientada-a-objetos-javascript/Aula 1/aula 1/Aula 1/Atividade 1/index.html
+++ b/programacao-orientada-a-objetos-javascript/Aula 1/aula 1/Aula 1/Atividade 1/index.html
@@ -7,27 +7,8 @@
     <title>Atividade 1</title>
 </head>
 <body>
-    <script>
-        const pessoa = {};
-        pessoa.profissao = "dev";
-        pessoa.hobby = "desenhar";
-        pessoa.sexo = "feminino";
+    <h1>Atividade 1</h1>
 
-        pessoa.trabalhar = function () {
-            return "projetos";
-        };
-
-        pessoa.pintar = function () {
-            return "quadros";
-        };
-
-        pessoa.treinar = function () {
-            return "volei";
-        };
-
-        console.log(pessoa);
-        console.log(pessoa.sexo, pessoa["hobby"]);
-        console.log(pessoa.treinar(), pessoa["trabalhar"]());
-    </script>
+    <script src="./objetos-literais.js"></script>
 </body>
 </html>
