--- a/programacao-orientada-a-objetos-javascript/conceitos.html
+++ b/programacao-orientada-a-objetos-javascript/conceitos.html
@@ -12,5 +12,8 @@
   <!-- <script src="sintaxe.js"></script> -->
   <!-- <script src="paradigmas.js"></script> -->
   <script src="objetos-literais-1.js"></script>
+  <!-- <script src="objetos-literais-2.js"></script> -->
+  <!-- <script src="objeto-window-global.js"></script> -->
+  <script src="uso-do-this.js"></script>
 </body>
 </html>
