--- a/programacao-orientada-a-objetos-javascript/Atividade 1/index.html
+++ b/programacao-orientada-a-objetos-javascript/Atividade 1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Atividade 1</h1>
-
+    //Desafio: Criar um objeto que vai representar uma pessoa com propriedades e metodos correspondentes.
     <script src="./objetos-literais.js"></script>
 </body>
 </html>
