--- a/programacao-orientada-a-objetos-javascript/Atividade 3/index.html
+++ b/programacao-orientada-a-objetos-javascript/Atividade 3/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Atividade 3</h1>
-    <!-- 1 - Implementar um método, onde a casa operação executada (ex: saque, deposito, transferência),
+    <!-- 1 - Implementar um método, onde a cada operação executada (ex: saque, deposito, transferência),
     ela deve ser registrada dentro do objeto (lançamentos).
     2 - implementar um método, onde todos os lançamentos sejam exibidos (extrato).-->
     <script src="./script.js"></script>
