--- a/programacao-orientada-a-objetos-javascript/Atividade 5/index.html
+++ b/programacao-orientada-a-objetos-javascript/Atividade 5/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Televisão</title>
+  <title>TV</title>
 </head>
 <body>
+  <!--Construa uma classe para gerar um objeto TV com as propriedades canal, volume e ligada e métodos liga, desliga, 
+  mudaDeCanal e aumentaVolume, diminuiVolume. Uma implementação publica e outra privada. -->
+  <script src="./script.js"></script>
 </body>
 </html>
