--- a/programacao-orientada-a-objetos-javascript/Atividade 5/Public/index.html
+++ b/programacao-orientada-a-objetos-javascript/Atividade 5/Public/index.html
@@ -9,6 +9,6 @@
 <body>
   <!--Construa uma classe para gerar um objeto TV com as propriedades canal, volume e ligada e métodos liga, desliga, 
   mudaDeCanal e aumentaVolume, diminuiVolume. Uma implementação publica e outra privada. -->
-  <script src="./script.js"></script>
+  <script src="./public.js"></script>
 </body>
 </html>
