--- a/programacao-orientada-a-objetos-javascript/Atividade Final/index.html
+++ b/programacao-orientada-a-objetos-javascript/Atividade Final/index.html
@@ -16,10 +16,9 @@
         Implemente um novo método em cada uma das classes filhas
         Sobrescreva o construtor em cada uma das classes filhas
         Sobrescreva um dos métodos herdados da classe pai-->
-    <script defer src="animal.js" type="module"></script>
-    <script defer src="cachorro.js" type="module"></script>
-    <script defer src="gato.js" type="module"></script>
-    <script defer src="papagaio.js" type="module"></script>
-    <script defer src="uso-de-classes.js" type="module"></script>
+        <script denfer src="./classes/uso-de-classes.js" type="module"></script>
+        <script denfer src="./classes/cachorro.js" type="module"></script>
+        <script denfer src="./classes/gato.js" type="module"></script>
+        <script denfer src="./classes/papagaio.js" type="module"></script>
 </body>
 </html>
